# data-pipeline-utils

./: .env  .gitignore  add_inti_file.py  blc_download.py  blc_download.ui  deal_proto_file.py  file_selector.py  file_selector.ui  file_selector_ui.py  main.py  print_topic_data.py  print_topic_data.py.bakk  python3_print_topic_data.py  qcombocheckbox.py  test.py
proto/: CMakeLists.txt  proto-config.cmake
proto/aeb/: aeb_state.proto  aeb_state_pb2.py  trigger_event.proto  trigger_event_pb2.py  visualizer_aeb_command.proto
proto/app/: deeproute_app_access_pb2.py  deeproute_app_data.proto  deeproute_app_event_pb2.py
proto/avm/: avm.proto  avm_pb2.py
proto/canbus/: BUILD.bazel  byd_tang_adas_detail_pb2.py  byd_tang_chassis_detail.proto  byd_tang_detail.proto  canbus_blc_state.proto  canbus_blc_state_pb2.py  canbus_state_report.proto  canbus_state_report_pb2.py  canraw.proto  canraw_pb2.py  car_info.proto  car_info.proto.in  car_info_pb2.py  chassis_pb2.py  dtu_hmi_canbus_interface.proto  dtu_hmi_canbus_interface_pb2.py  gl_p177_chassis_detail.proto  gl_p177_chassis_detail_pb2.py  gwm_chassis_detail.proto  gwm_chassis_detail_pb2.py  gwm_d03_chassis_detail.proto  gwm_d03_chassis_detail_pb2.py  gwm_de09_chassis_detail.proto  gwm_de09_chassis_detail_pb2.py  gwm_p03_chassis_detail.proto  gwm_p03_chassis_detail_pb2.py  hy11_chassis_detail.proto  hy11_chassis_detail_pb2.py  m5_chassis_detail.proto  mar_chassis_detail.proto  mar_chassis_detail_pb2.py  model_config.proto  model_config_pb2.py  torque_speed_table_pb2.py
proto/church/: onboard_header.proto  onboard_header_pb2.py  schedule_event_pb2.py
proto/cloud_cfgs/: functions_cloud_config.proto  functions_cloud_config_pb2.py
proto/common/: BUILD.bazel  drive_state.proto  geometry.proto  geometry_pb2.py  header.proto  module_event.proto  module_event_pb2.py  onboard_status.proto  onboard_status_pb2.py  pair.proto  report_event.proto  report_event_pb2.py  security_strategy_pb2.py  vehicle_signal_pb2.py
proto/compliance/: compliance_pb2.py
proto/control/: control_cmd.proto  control_cmd_pb2.py
proto/dem/: BUILD.bazel  dem_command_pb2.py  dem_event.proto  execution_management_pb2.py  execution_process_state.proto  execution_process_state_pb2.py  function_group_state.proto  function_group_state_pb2.py
proto/drapi/: BUILD.bazel  base.proto  base_pb2.py  blc_mcu.proto  blc_mcu_pb2.py  blc_to_aeb.proto  blc_to_aeb_pb2.py  business_info.proto  business_info_pb2.py  command.proto  command_pb2.py  gl_navigation.proto  gl_navigation_pb2.py  gl_p177_downstream_chassis.proto  gl_p177_downstream_chassis_pb2.py  gwm_hut_notification.proto  gwm_hut_notification_pb2.py  gwm_navigation.proto  gwm_navigation_pb2.py  gwm_p03_downstream_chassis.proto  gwm_p03_downstream_chassis_pb2.py  local_config.proto  local_config_pb2.py  map.proto  notification.proto  notification_pb2.py  operation_status.proto  operation_status_pb2.py  payload.proto  render_context.proto  render_context_pb2.py  road_object_pb2.py  route_planning.proto  route_planning_pb2.py
proto/drdtu/: BUILD.bazel  debug_info.proto  debug_info_pb2.py  dtu_command.proto  dtu_command_pb2.py  dtu_event.proto  dtu_event_pb2.py  navigation_data_pb2.py  report_event.proto  report_event_pb2.py
proto/drivers/: BUILD.bazel  calibration_type_pb2.py  orincam_image_info.proto  pointcloud2.proto  pointcloud2_pb2.py  sensor_can_msg.proto  sensor_image.proto  sensor_image_pb2.py
proto/dsm/: dsm.proto  dsm_event.proto  dsm_event_pb2.py  dsm_pb2.py
proto/dta/: BUILD.bazel
proto/esa/: esa_state.proto  esa_state_pb2.py  esa_trajectory_pb2.py  visualizer_esa_command_pb2.py
proto/grading_onboard/: grading_onboard_output_info.proto  grading_onboard_output_info_pb2.py
proto/graph_match/: graph_match_event.proto  graph_matching.proto  graph_matching_pb2.py
proto/gwm/: GWM-HMI-common.proto  GWM-HMI-object.proto  GWM-HMI-rasmap.proto  GWM_HMI_common_pb2.py  GWM_HMI_object_pb2.py  GWM_HMI_rasmap_pb2.py
proto/idl/: church_component_service_pb2.py  dtu_grpc_service.proto  local_routing_service.proto  local_routing_service_pb2_grpc.py  localization_service.proto  localization_service_pb2.py  localization_service_pb2_grpc.py  lock_on_road_service_pb2.py  map_engine_service.proto  map_engine_service_pb2.py  online_recorder_service.proto  online_recorder_service_pb2_grpc.py  perception_service.proto  perception_service_pb2_grpc.py  planning_service.proto  routing_service.proto  routing_service_pb2_grpc.py
proto/localization/: BUILD.bazel  ground_truth_measurements.proto  ground_truth_measurements_pb2.py  havp_map.proto  havp_map_pb2.py  localization_external_command.proto  localization_external_command_pb2.py  localization_external_events.proto  localization_external_events_pb2.py  localization_internal_messages.proto  localization_internal_messages_pb2.py
proto/lock_on_road/: BUILD.bazel  lock_on_road.proto  lock_on_road_debug.proto  lock_on_road_debug_pb2.py  lock_on_road_pb2.py
proto/map/: BUILD.bazel  amap_drive_route_planning_pb2.py  common_type.proto  common_type_pb2.py  deeproute_map_guidance_action_pb2.py  deeproute_map_ras_map_plus.proto  deeproute_map_ras_map_plus_pb2.py  ivi_data.proto  map_common.proto  map_common_pb2.py  routing.proto  routing_pb2.py  sd_horizon_provider.proto  sd_horizon_provider_pb2.py  sd_map.proto  sd_map_debug_pb2.py  sd_map_pb2.py  sd_map_type.proto  sd_map_type_pb2.py  vis_map.proto
proto/odd/: BUILD.bazel  gwm_odd.proto  gwm_odd_pb2.py  odd.proto  odd_pb2.py
proto/pcap_capture/: pcap.proto  pcap_pb2.py
proto/perception/: BUILD.bazel  deeproute_perception_adb.proto  deeproute_perception_adb_pb2.py  deeproute_perception_camera.proto  deeproute_perception_camera_pb2.py  deeproute_perception_invisible.proto  deeproute_perception_obstacle.proto  deeproute_perception_obstacle_pb2.py  deeproute_perception_ras_map.proto  deeproute_perception_ras_map_pb2.py  deeproute_perception_rear_warning.proto  deeproute_perception_rear_warning_pb2.py  perception_dtu_interface.proto  perception_dtu_interface_pb2.py  perception_frame_context_pb2.py  perception_nn_pb2.py  (+4 more)
(+1123 files in other folders)
